<resources>
    <string name="app_name">CS-2340-Student-Scheduler-App</string>
    <string name="title_home">To Do List</string>
    <string name="title_dashboard">Classes</string>
    <string name="title_notifications">Assignments</string>
    <string name="class1"></string>
    <string name="time1">Time: 2:30 pm</string>
    <string name="instructor1">Instructor: Mr. Example</string>
    <string name="butAddText">Add Class</string>
    <string name="editButton">Edit</string>
    <string name="submitButtClass">Submit</string>
    <string name="instructName">Instructor Name:</string>
    <string name="classTime">Class Time:</string>
    <string name="className">Class Name:</string>
    <string name="editTextName"></string>
    <string name="class_name">Class Name:</string>
    <string name="due_date">Due Date:</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_class">Add Class</string>
    <string name="assignment_title">Assignment Title:</string>
    <string name="due_date_menu">Due Date:</string>
    <string name="class_text">Class:</string>
    <string name="sort_by_due_date">Sort By Due Date</string>
    <string name="sort_by">Sort By:</string>
    <string name="time">Time:</string>
    <string name="exam_title">Exam Title:</string>
    <string name="exams">Exams</string>
    <string name="completed">Completed</string>
    <string name="show_incomplete_only">Show Incomplete Only</string>
    <string-array name="sorter_array">
        <item>Closest Due Date</item>
        <item>Class Name</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_title">Tasks</string>
    <string name="user">User</string>
    <string name="select_user">Select User</string>
    <string name="classStr">Class:</string>
    <string name="room_number">Room Number:</string>
    <string name="section">Section:</string>
    <string name="location">Location:</string>
    <string name="days_of_the_week_comma_seperated_no_spaces">Days Of the Week(comma seperated, no spaces):</string>
    <string name="days_of_the_week">Days Of The Week:</string>
    <string name="tasks">Tasks:</string>
    <string name="exam_date">EXAM DATE:</string>
</resources>