<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cs_2340_student_scheduler_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cs_2340_student_scheduler_app.ui.classes.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_addClass"
            app:destination="@id/navigation_addClass" />
        <argument
            android:name="className"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="time"
            app:argType="string" />
        <argument
            android:name="instructName"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_edit_fragment"
            app:destination="@id/navigation_edit_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cs_2340_student_scheduler_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_addClass"
        android:name="com.example.cs_2340_student_scheduler_app.ui.classes.MenuFragment"
        android:label="Menu"
        tools:layout="@layout/new_class_menu" >
        <action
            android:id="@+id/action_navigation_addClass_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_fragment"
        android:name="com.example.cs_2340_student_scheduler_app.ui.classes.EditFragment"
        android:label="Edit Fragment"
        tools:layout="@layout/edit_fragment" >
        <action
            android:id="@+id/action_navigation_edit_fragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>