<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ndroid="http://schemas.android.com/tools"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            >
        <TextView
            android:id="@+id/className"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class1"
            ndroid:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/timeText"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/time1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/className" />

        <TextView
            android:id="@+id/instructName"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/instructor1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeText" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/deleteBut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_delete"
                    android:contentDescription="TODO" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

